fix CORS configuration (2)